Added two skills
Added Coding and CDISC skill sets.

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,11 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+  
+# Coding
+- skill: Coding
+  description: Used several coding languages to contribute to the development of biopharma projects.
+  
+# CDISC 
+- skill: Clinical data standards
+  description: Contributed to the development of the SDTM Trial Design Model
