--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Data Science Nanodegree  
+  uni: Stanford
+  year: June, 2018 &mdash; August, 2018
   # awards:
-  # summary:
+  summary: Learned lots about data munging!
