--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ resume_header_intro: "<p>Charting the knowledge of the Internet, just like Galil
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+resume_looking_for_work:        "no"
 
 # Decide which sections to use
 # comment out to hide
